WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217285
URLParser should fail to parse URLs with hosts containing invalid punycode encodings
https://bugs.webkit.org/show_bug.cgi?id=217285
Summary
URLParser should fail to parse URLs with hosts containing invalid punycode en...
Alex Christensen
Reported
2020-10-03 15:54:25 PDT
URLParser should fail to parse URLs with hosts containing invalid punycode encodings
Attachments
Patch
(19.91 KB, patch)
2020-10-03 15:56 PDT
,
Alex Christensen
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-10-03 15:56:29 PDT
Created
attachment 410445
[details]
Patch
Darin Adler
Comment 2
2020-10-04 14:46:15 PDT
Comment on
attachment 410445
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410445&action=review
> Source/WTF/wtf/URLParser.cpp:2514 > + if (domain.isAllASCII() && !domain.startsWithIgnoringASCIICase("xn--")) {
This can use the simpler, more efficient startsWithLettersIgnoringASCIICase. And there is a version that works on StringImpl& so there is no need to change the argument type: if (domain.isAllASCII() && !startWithLettersIgnoringASCIICase(domain, "xn--")) { The name says "letters", but it also works correctly with other ASCII characters in the 0x20-0x3F and 0x60-0x7F ranges, which includes "-".
Alex Christensen
Comment 3
2020-10-05 07:51:32 PDT
http://trac.webkit.org/r267965
Radar WebKit Bug Importer
Comment 4
2020-10-05 07:52:21 PDT
<
rdar://problem/69954230
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug