URLParser should fail to parse URLs with hosts containing invalid punycode encodings https://bugs.webkit.org/show_bug.cgi?id=217285

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/failure-expected.txt:
* web-platform-tests/url/toascii.window-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WTF:

URLParser has a fast path for parsing hosts that are all ASCII, but that does not validate hosts that are invalid punycode, such as "xn--".
Since all punycode encoded strings start with "xn--", if the input string starts with "xn--" then skip the fast path and let ICU decide if it's valid.

* wtf/URLParser.cpp:
(WTF::URLParser::domainToASCII):
(WTF::URLParser::startsWithXNDashDash):
(WTF::URLParser::parseHostAndPort):
* wtf/URLParser.h:



Canonical link: https://commits.webkit.org/230074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267965 268f45cc-cd09-0410-ab3c-d52691b4dbfc