Source/WTF/wtf/URLParser.h
@@ -113,6 +113,7 @@ private:
     bool copyBaseWindowsDriveLetter(const URL&);
     StringView parsedDataView(size_t start, size_t length);
     UChar parsedDataView(size_t position);
+    template<typename CharacterType> bool startsWithXNDashDash(CodePointIterator<CharacterType>);
 
     bool needsNonSpecialDotSlash() const;
     void addNonSpecialDotSlash();
